examples/test/testpolicy9273.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9273
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key21: value38
      key18: value43
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value8
          key38: value21
      podSelector:
        matchLabels:
          key26: value9
          key17: value41
          key32: value31
